--- a/5-estructura-de-datos/style.css
+++ b/5-estructura-de-datos/style.css
@@ -1,39 +1,66 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
 }
+
+.header {
+    background-color: #3a3a3a;
+    background: linear-gradient(to right, rgb(0, 104, 0), #43ff62);
+    color: #fff;
+    text-align: center;
+    padding: 1em 0;
+    font-family: verdana;
+    box-shadow: 0 0 10px rgb(60, 255, 0), 0 0 20px rgb(0, 214, 71), 0 0 30px rgb(21, 255, 0), 0 0 40px rgb(0, 107, 0);
+}
+
+.header h1 {
+    margin: 10px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 20px;
+    padding: 10px;
 }
+
 .card {
     background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    width: 200px;
+    border-radius: 10px;
+    box-shadow: 0 23px 28px rgba(0, 255, 42, 0.11);
+    margin: 15px;
+    width: 300px;
     overflow: hidden;
     transition: transform 0.2s;
 }
+
 .card:hover {
     transform: scale(1.05);
 }
-.card img {
+
+.card-image {
     width: 100%;
-    height: auto;
+    height: 300px;
+    object-fit: cover;
 }
+
 .card-content {
     padding: 15px;
 }
-.card-content h3 {
+
+.card-title {
+    font-size: 1.5em;
     margin: 0 0 10px;
-    font-size: 18px;
 }
-.card-content p {
-    margin: 0;
-    color: #666;
+
+.card-description {
+    color: #0d5a17;
+    font-size: 1em;
+    line-height: 1.5;
+}
+
+.card-button:hover {
+    background-color: #555;
 }
