--- a/7-inicio-sesion/css/pagina.css
+++ b/7-inicio-sesion/css/pagina.css
@@ -2,7 +2,9 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-image: url(https://img.freepik.com/foto-gratis/fondo-pintura-acuarela-purpura-vibrante_53876-145046.jpg?ga=GA1.1.1479186660.1713327420&semt=ais_hybrid);
+    background-repeat: no-repeat;
+    background-size: 20000px;
 }
 
 .header {
@@ -64,3 +66,4 @@ body {
 .card-button:hover {
     background-color: #555;
 }
+
